# optimisation-d-une-ligne-d-assemblage-ing2-tg-2023-2024-5-6

./: .gitignore  CMakeLists.txt  Exclusion.c  README.md
src/: Bloc.c  Bloc.h  Fonctions_tests.c  Fonctions_tests.h  Fonctions_tests_affichage.c  Fonctions_tests_affichage.h  Time_module.c  Time_module.h  Traverser_les_operations.c  Traverser_les_operations.h  color.c  color.h  exclusion.c  exclusion.h  graphe.txt  initialisation_operations.c  initialisation_operations.h  main.c  main.h  multi_contraintes.c  multi_contraintes.h  precedence.c  precedence.h
